--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
 <body>
     <canvas id="gameCanvas" width="320" height="480"></canvas>
     <script src="script.js"></script>
+    <script>
+        // Инициализация Telegram Web Apps
+        window.Telegram.WebApp.initDataUnsafe = {
+            user: {
+                id: "<ID>",
+                is_bot: false,
+                first_name: "John",
+                last_name: "Doe",
+                username: "johndoe",
+                language_code: "en"
+            }
+        };
+
+        window.Telegram.WebApp.ready();
+    </script>
 </body>
 </html>
